# matscope

./: .gitignore  README.md  pyproject.toml
matscope/: __init__.py  core.py  datasets.py
matscope/analysis/: __init__.py  cpd.py  layerwise.py  shift.py  similarity.py
matscope/models/: __init__.py  pyg_backends.py  registry.py  torch_wrapper.py
matscope/probes/: __init__.py  linear.py  nonlinear.py
matscope/utils/: __init__.py  extraction.py  reporting.py
tests/: test_core.py  test_v020.py
